# vwu-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 02b7480fa765_audit_log_and_score_corrections.py  650c509fb940_initial_schema.py  6fc502a220d5_background_jobs.py  ef7aaad0c99d_dictionary_user_words_and_flashcard_.py
app/: main.py  models_registry.py
app/admin/: attempts.py  catalog.py  catalog_schemas.py  dashboard.py  observability.py  panel.py  schemas.py  tasks.py
app/admin/static/: dashboard.html
app/api/: health.py  middleware.py
app/api/dependencies/: admin.py  auth.py  db.py
app/api/errors/: envelope.py  handlers.py  route.py
app/api/v1/: access.py  attempts.py  catalog.py  dictionary.py  flashcards.py  router.py  sessions.py  statistics.py
app/content/: seed.py
app/core/: base_model.py  config.py  context.py  database.py  exceptions.py  logging.py  security.py
app/modules/access/: models.py  schemas.py  service.py
app/modules/catalog/: models.py  schemas.py  service.py
app/modules/dictionary/: factory.py  free_dictionary.py  merge.py  models.py  pons.py  (+3 more)
app/workers/: celery_app.py  runtime.py  tasks.py
bot/: main.py
bot/api_client/: client.py  errors.py
bot/callbacks/: factories.py
bot/core/: config.py  logging.py
bot/handlers/: errors.py  start.py
bot/keyboards/: menu.py
bot/middlewares/: context.py
bot/states/: fsm.py
bot/telegram/: client.py  limits.py
docs/: BACKEND_TZ.md  TELEGRAM_BOT_TZ.md  WRITING_ENGINE_ENGLISH_EXAMPLE.md
tests/: _fakes.py  conftest.py  test_access_catalog.py  test_admin_catalog.py  test_admin_review.py  test_api_client.py  test_async_eval.py  test_dashboard.py  test_dictionary.py  test_flashcards.py  test_flow.py  test_generation.py  test_health.py  test_llm_gemini.py  test_scheduler.py  test_scoring.py  test_seed.py  test_statistics.py  test_word_count.py
(+44 files in other folders)
